--- a/package.json
+++ b/package.json
@@ -3,25 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "node --watch mock-server.js",
+    "dev:mock": "concurrently \"npm run dev\" \"npm run mock\""
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "axios": "^1.7.2",
+    "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-number-format": "^5.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@playwright/test": "^1.46.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/sinon": "^17.0.3",
+    "concurrently": "^8.2.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
+    "postcss": "^8",
+    "sinon": "^18.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
